--- a/pom.xml
+++ b/pom.xml
@@ -125,7 +125,13 @@
 			<artifactId>httpclient</artifactId>
 			<version>4.5</version>
 		</dependency>
-
+		
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
